syntax = "proto3";

package computer.v1;
import "computer/v1/memory_message.proto";
option go_package= "github.com/fineman999/TIL/GRPC/buf/buf-test/proto/computer/v1;computer";

message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}