syntax = "proto3";
option go_package = "./pb";

import "proto/laptop_message.proto";
import "proto/filter_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

message SearchLaptopRequest {
    Filter filter = 1;
}

message SearchLaptopResponse {
    Laptop laptop = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse);
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse);
}